--- a/Impersonator/resources/assets/css/impersonator.css
+++ b/Impersonator/resources/assets/css/impersonator.css
@@ -10,7 +10,7 @@
     font-size: 11px;
     font-weight: bold;
     text-transform: uppercase;
-    color: red;
+    color: #e75650;
 }
 
 #impersonator .terminate {
