--- a/Impersonator/resources/assets/css/impersonator.css
+++ b/Impersonator/resources/assets/css/impersonator.css
@@ -1,6 +1,8 @@
 #impersonator {
-    flex-basis: 100%;
-    margin: 0 0 25px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin: 0 0 25px 25px;
     text-align: center;
 }
 
@@ -14,14 +16,6 @@
 }
 
 #impersonator .terminate {
-    padding: 5px 8px;
     font-size: 10px;
     text-transform: uppercase;
-    color: #000;
-    background: rgba(255, 255, 255, 0.85);
-    border-radius: 3px;
 }
-    #impersonator .terminate:hover {
-        color: inherit;
-        opacity: 0.7;
-    }
